--- a/project2/contact.html
+++ b/project2/contact.html
@@ -45,7 +45,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.1097297103324!2d44.726140015489854!3d41.71815097923512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404473bc0f45e7b9%3A0x8adb159500998090!2sNew%20Sports%20Palace!5e0!3m2!1sen!2sge!4v1661074380629!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <div class="owl-carousel owl-theme">
+        <div class="owl-carousel owl-theme owlCarousel">
             <div class="item">
                 <img src="img/blog1.jpg" alt="x">
             </div>
