--- a/project2/contact.html
+++ b/project2/contact.html
@@ -14,7 +14,7 @@
         <div class="logo-nav">
 
             <div class="logo">
-                <h1><a href="signin.html">Coronatime</a></h1>
+                <h1><a href="signin.html" rel="unfollow">Coronatime</a></h1>
             </div>
 
             <div class="nav" id="nav"></div>
